2008-05-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #531592

	* e-error.c (ee_build_label):
	Add an 'escape_args' parameter for strings that should /not/ be
	escaped, such as window titles and status bar messages.

	* e-error.c (e_error_newv):
	Pass an appropriate 'escape_args' value to ee_build_label().

2008-05-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #525241 (EPluginUI)

	* Makefile.am:
	Add e-plugin-ui.[ch].

	* e-plugin.h (EPluginClass):
	Add a "get_symbol" method for extracting arbitrary symbols
	from an EPlugin.  Implementation of the method is optional.

	* e-plugin.c (e_plugin_get_symbol):
	New function invokes the new "get_symbol" EPlugin method.

	* e-plugin.c (epl_get_symbol):
	New function implements the new "get_symbol" EPlugin method.
	It extracts the given symbol name from the GModule.

	* e-plugin-ui.[ch]:
	New EPluginHook subclass that allows plugins to extend menus,
	toolbars, and popups that are managed by GtkUIManager instead
	of BonoboUI.  Should eventually replace EMenu/EPopup.

2008-04-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #529254

	* e-util.c: (e_write_file_uri):	Save file properly.
	Handle either URI or filename. Return success or failure, not gint.

2008-04-22  Matthew Barnes  <mbarnes@redhat.com>

	* Makefile.am:
	Add gconf-bridge.[ch] from composer.

2008-04-18  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #528817

	* e-plugin.c (e_plugin_register_type):
	Fix a typo in the logic.  This might explain why I occasionally
	find Exchange Operations disabled on startup.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* e-gui-utils.c: Do not include gnome-vfs.
	* e-util.c: (e_write_file_uri), (e_file_get_save_path):
	* e-dialog-utils.c: (e_file_can_save), (e_file_check_local):
	Use gio instead of gnome-vfs.
	* e-util.h:
	* e-util.c: (e_util_guess_mime_type), (e_util_filename_to_uri),
	(e_util_uri_to_filename), (e_util_read_file): New helper functions.
