@@ -510,7 +510,7 @@ e_error_newv(GtkWindow *parent, const char *tag, const char *arg0, va_list ap)
 
 	w = gtk_image_new_from_stock(type_map[e->type].icon, GTK_ICON_SIZE_DIALOG);
 	gtk_misc_set_alignment((GtkMisc *)w, 0.0, 0.0);
-	gtk_box_pack_start((GtkBox *)hbox, w, TRUE, TRUE, 12);
+	gtk_box_pack_start((GtkBox *)hbox, w, FALSE, FALSE, 12);
 
 	args = g_ptr_array_new();
 	tmp = (char *)arg0;
@@ -564,7 +564,7 @@ e_error_newv(GtkWindow *parent, const char *tag, const char *arg0, va_list ap)
 		gtk_box_pack_start((GtkBox *)hbox, scroll, FALSE, FALSE, 0);
 		gtk_window_set_default_size ((GtkWindow *)dialog, 360, 180);
 	} else
-		gtk_box_pack_start((GtkBox *)hbox, w, FALSE, FALSE, 0);
+		gtk_box_pack_start((GtkBox *)hbox, w, TRUE, TRUE, 0);
 
 	gtk_widget_show_all(hbox);
 
