@@ -368,14 +368,6 @@ You can choose to ignore this folder, overwrite or append its contents, or quit.
     <button stock="gtk-yes" _label="Send Receipt" response="GTK_RESPONSE_YES"/>
   </error>
 
-  <error id="ask-mark-read" type="question" default="GTK_RESPONSE_NO">
-    <_title>Mark all messages as read</_title>
-    <_primary>Mark all messages in this folder and subfolders as read?</_primary>
-    <_secondary xml:space="preserve">Do you want the operation to be performed also in the subfolders?</_secondary>
-    <button stock="gtk-no" _label="Only on _Current Folder" response="GTK_RESPONSE_NO"/>
-    <button stock="gtk-yes" _label="on Current Folder and _Subfolders" response="GTK_RESPONSE_YES"/>
-  </error>
-
   <error id="ask-quick-offline" type="question" default="GTK_RESPONSE_NO">
     <_primary>Synchronize folders locally for offline usage?</_primary>
     <_secondary xml:space="preserve">Do you want to locally synchronize the folders that are marked for offline usage?</_secondary>
