@@ -1,3 +1,9 @@
+2008-05-16  Matthew Barnes  <mbarnes@redhat.com>
+
+	** Fixes bug #514383
+
+	* mark-all-read.c: Add a Cancel button.
+
 2007-12-20  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #362638
